added new images and generate cards dynamically

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="./main.js"></script>    
+    <script src="./src/memoryGame.js"></script>
+    <script src="./src/screen.js"></script>
+
     <title>Memory Game - Harry Potter</title>
 </head>
 <body class="container-fluid">
@@ -17,27 +21,7 @@
 
     <br/>
 
-    <div class="row">
-        <div class="col-md-3">
-            <div class="card" style="width: 50%">
-                <img src="./resources/img/ginny.jpg" class="card-img-top" alt="...">
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="card" style="width: 50%">
-                <img src="./resources/img/fred-and-george-weasley.jpg" class="card-img-top" alt="...">
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="card" style="width: 50%">
-                <img src="./resources/img/hagrid.jpg" class="card-img-top" alt="...">
-            </div>            
-        </div>
-        <div class="col-md-3">
-            <div class="card" style="width: 50%">
-                <img src="./resources/img/luna.jpg" class="card-img-top" alt="...">
-            </div>            
-        </div>
+    <div id="cardsSection" class="row">       
     </div>
 
 </body>
