after click on play, duplicated and shuffle the cards

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <br/>
 
     <div class="container-fluid">
-        <button id="btnBegin" type="button" class="btn btn-success">click here to start</button>
+        <button id="bntPlay" type="button" class="btn btn-success">click here to play</button>
         <button id="btnShowAll" type="button" class="btn btn-danger">show all</button>
     </div>
 
