--- a/index.html
+++ b/index.html
@@ -18,11 +18,16 @@
         <button id="bntPlay" type="button" class="btn btn-success">click here to play</button>
         <button id="btnShowAll" type="button" class="btn btn-danger">show all</button>
     </div>
-
-    <br/>
+    
+    <div class="row container-fluid">
+        <div id="dialogMessageId" class="alert alert-success invisible" role="alert">
+            Correct !!
+        </div>          
+    </div>
+    <br/>   
 
     <div id="cardsSection" class="row">       
     </div>
-
+ 
 </body>
 </html>
