reveal the card on first click

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="./src/util.js"></script>
     <script src="./src/memoryGame.js"></script>
     <script src="./src/screen.js"></script>
+    <link rel="stylesheet" href="./resources/style/main.css">
 
     <title>Memory Game - Harry Potter</title>
 </head>
@@ -16,7 +17,6 @@
     <div class="container-fluid">
         <div class="row">
             <button id="bntPlay" type="button" class="btn btn-success">click here to play</button>
-            <button id="btnShowAll" type="button" class="btn btn-danger">show all</button>
         </div>
         
         <br/>
@@ -30,7 +30,7 @@
         <div class="row">
             <div id="dialogMessageId" class="alert alert-success invisible" role="alert">
                 Correct !!
-            </div>          
+            </div>
         </div>
         <br/>   
     
