include theme sound

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
             </div>
         </div> 
     </div>
+
+    <audio autoplay src="./resources/misc/harry-potter-theme.mp3"></audio>
  
 </body>
 </html>
